package CloudIntelligentConferenceSystem;

public interface Command {
    void execute();
    void undo();
} 