package CloudIntelligentConferenceSystem;

public class DesktopPlatformAPI implements PlatformAPI {
    @Override
    public void videoOn() {
    }

    @Override
    public void audioOff() {
    }

    @Override
    public void shareScreen() {
    }

    @Override
    public void sendMessage(String message) {
    }
} 