package CloudIntelligentConferenceSystem;

public class EnergySavingStrategy implements SchedulingStrategy {
    @Override
    public void schedule(Meeting meeting) {
    }
} 