package CloudIntelligentConferenceSystem;

public class LoggerObserver implements Observer {
    @Override
    public void update(String message) {
    }
} 