package CloudIntelligentConferenceSystem;

public interface MeetingRecord {
    String getContent();
} 