package CloudIntelligentConferenceSystem;

public interface NetManager {
}
