package CloudIntelligentConferenceSystem;

public interface Notifier {
}
