package CloudIntelligentConferenceSystem;

public interface Observer {
    void update(String message);
} 