package CloudIntelligentConferenceSystem;

public interface PlatformAPI {
    void videoOn();
    void audioOff();
    void shareScreen();
    void sendMessage(String message);
} 