package CloudIntelligentConferenceSystem;

public class RemoteObserver implements Observer {
    @Override
    public void update(String message) {

    }
} 