package CloudIntelligentConferenceSystem;

public interface SchedulingStrategy {
    void schedule(Meeting meeting);
} 